<resources>
    <string name="app_name">PuckSensor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Generic -->
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>

    <!-- Home Screen -->
    <string name="home">Home</string>
    <string name="home_instruction_1">Start by selecting a user.</string>
    <string name="home_instruction_2">After selecting a user, choose the test you want to do.</string>
    <string name="shot">Shot</string>
    <string name="evaluation">Evaluation</string>
    <string name="analysis">Analysis</string>
    <string name="stickHandling">Stick Handling</string>
    <string name="freeRoaming">Free Roaming</string>
    <string name="calibration">Calibration and Settings</string>


    <!-- Action Bar -->
    <string name="noBleDeviceConnected">No BLE device connected</string>
    <string name="bleDeviceConnected">BLE device connected</string>

    <!-- New user popup -->
    <string name="newUser">New User</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>


    <!-- History Screen -->
    <string name="startTest">Start Test</string>
    <string name="empty_history">No tests have been recorded yet.</string>
    <string name="username">User</string>
    <string name="date">Date</string>
    <string name="testDetails">Details</string>

    <!-- Save Test popup -->
    <string name="saveTest">Save Test</string>
    <string name="saveTestHint">Enter test description</string>

    <!-- Stick Handling -->
    <string name="load_exercice">Load Exercise</string>
    <string name="start_exercice">Start Exercise</string>
    <string name="free_mode">Free mode</string>
    <string name="reset_data">Clear and reset</string>

    <!-- Loading exercise pop-up -->
    <string name="choose_exercise">Which exercise you want to try: </string>

    <!-- Analysis Screen -->
    <string name="time_evolution">Time evolution</string>
    <string name="compare">Compare with other user:</string>
    <string name="compare_stat">Compare which statistic:</string>
    <string name="max_accel">Maximum acceleration:</string>
    <string name="mean_accel">Mean acceleration:</string>
    <string name="standard_error_label">Standard Error:</string>
    <string name="release_time_label">Release time:</string>



    <!-- Calibration Screen -->
    <string name="peak_acc">Shot peak threshold: </string>
    <string name="stick_acc">Stick handling threshold: </string>
    <string name="release_acc">Release threshold: </string>
    <string name="points_board">Nb of points on each side: </string>
    <string name="calibrate_shot">Calibrate axis</string>
    <string name="calibrate_centrifuge">Calibrate centrifuge</string>
    <string name="shot_wait">Shot mode delay between</string>





    <!-- Shot Statistics Screen -->
    <string name="loading">Loading simulation data, please wait...</string>
    <string name="startingSensors">Starting acceleration sensors, please wait..</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="stopTest">Stop</string>
    <string name="save">Save</string>
    <string name="xyzAxisData">XYZ Axis Data</string>
    <string name="individualAxes">Record individual axes (reduces performance)</string>
    <string name="xAxisData">Show X Axis Data</string>
    <string name="yAxisData">Show Y Axis Data</string>
    <string name="zAxisData">Show Z Axis Data</string>
    <string name="show_acceleration">Show acceleration</string>
    <string name="show_power">Show power</string>
    <string name="show_speed">Show speed</string>
    <string name="show_angular">Show angular speed</string>
    <string name="show_high">Show only high G data</string>
    <string name="show_low">Show only low G data</string>
    <string name="recent_shot1">Last shot </string>
    <string name="recent_shot2">Previous shot 1 </string>
    <string name="recent_shot3">Previous shot 2 </string>
    <string name="recent_shot4">Previous shot 3 </string>
    <string name="recent_shot5">Compare with: </string>
    <!-- Last recent shot is actually another one from a database -->
    <string name="compare_title">More comparison</string>
    <string name="autosave">Autosave</string>



    <!-- Comparison menu -->
    <string name="compare_who">Compare with who?</string>
    <string name="compare_shot">Compare which shot?</string>
    <string name="compare_select">Compare!</string>



    <!-- Acceleration Chart -->
    <string name="accelChartTitle">Acceleration over time (g)</string>
    <string name="topAccel">Top Acceleration</string>
    <string name="topAccelXYZ">Top Acceleration XYZ Axis</string>
    <string name="topAccelX">Top Acceleration X Axis</string>
    <string name="topAccelY">Top Acceleration Y Axis</string>
    <string name="topAccelZ">Top Acceleration Z Axis</string>

    <!-- Power Chart -->
    <string name="powerChartTitle">Puck power over time (W)</string>
    <string name="topPower">Top Pover</string>
    <string name="topPowerXYZ">Top Power</string>

    <!-- Speed Chart -->
    <string name="speedChartTitle">Speed over time (km/h)</string>
    <string name="topSpeed">Top Speed</string>
    <string name="topSpeedXYZ">Top Speed XYZ Axis</string>
    <string name="topSpeedX">Top Speed X Axis</string>
    <string name="topSpeedY">Top Speed Y Axis</string>
    <string name="topSpeedZ">Top Speed Z Axis</string>

    <!-- Rotation Chart -->
    <string name="rotationChartTitle">Rotation over time (degrees/s)</string>
    <string name="topRotation">Top Rotation</string>

    <!-- Sensortag strings -->

    <!-- Ble activity -->
    <string name="ble_scan_title">Scan</string>
    <string name="connect">Connect</string>
    <string name="button_scan">Scan</string>
    <string name="title_device_list">Device List</string>
    <string name="device">Device</string>
    <string name="header">Available BLE Devices</string>
    <string name="disconnected">Device is not connected</string>
    <string name="control">Done</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="app_closing">Exiting BLE SensorTag app</string>
    <string-array name="device_filter"><item>SensorTag</item><item>Physics Sensor</item></string-array>
    <string name="nodevice">There are no SensorTags advertising within range. Please push the side button on the SensorTag to start advertising.</string>
    <string name="scan_advice">The Android device is not scanning. Please tap \'Scan\' to scan for SensorTags.</string>

    <!-- Options menu -->
    <string name="prefs">Preferences</string>
    <string name="fwupdate">Firmware update</string>
    <string name="bt">Bluetooth Adapter</string>
    <string name="sthome">SensorTag Home</string>
    <string name="tie2e">TI E2E Community</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- Device activity -->
    <string name="dev_addr">Device address</string>
    <string name="image">Image</string>

    <!-- Sensor names-->
    <string name="keys">Keys</string>
    <string name="acc">Accelerometer</string>
    <string name="mag">Magnetometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="hum">Humidity</string>
    <string name="bar">Barometer</string>
    <string name="tAmb">Ambience Temperature</string>
    <string name="tObj">Object Temperature</string>

    <!-- Sensor misc. -->
    <string name="xyz3">x:\ny:\nz:\n</string>
    <string name="empty3">*\n*\n*\n</string>
    <string name="unitDegSec3">deg/s\ndeg/s\ndeg/s\n</string>
    <string name="unitG3">g\ng\ng\n</string>
    <string name="unitT3">uT\nuT\nuT\n</string>

    <string name="empty1">*\n</string>
    <string name="unitDeg">deg/C\n</string>
    <string name="unitRH">%rH\n</string>
    <string name="unitPA_Meter">nPA\nmeter</string>

    <!-- FWUpdate activity -->
    <string name="title_oad">Firmware update (OAD)</string>
    <string name="start_prog">Start programming</string>
    <string name="prog_ogoing">NB! Not permitted to close this view during OAD transfer</string>
    <string name="load_image_a">Image A</string>
    <string name="load_image_b">Image B</string>
    <string name="load_image_c">Custom</string>
    <string name="no_image">Not an OAD image</string>
    <string name="no_image_sel">No image selected</string>
    <string name="new_image">New image:</string>
    <string name="cur_image">Current image:</string>
    <string name="idle">idle</string>
    <string name="btn_txt_confirm">Confirm</string>


</resources>
