<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/test_button_shadow"
    android:paddingLeft="@dimen/popup_button_horizontal_padding"
    android:paddingRight="@dimen/popup_button_horizontal_padding"
    android:paddingTop="@dimen/popup_button_vertical_padding"
    android:paddingBottom="@dimen/popup_button_vertical_padding">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:textSize="@dimen/popup_title_text_size"
        android:textColor="@color/instruction_grey"
        android:layout_marginBottom="@dimen/popup_title_bottom_margin"
        android:gravity="center" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstNameHint"
        />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastNameHint"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/popup_button_container_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_user_button"
            android:text="@string/save"
            android:background="@drawable/test_button_shadow"
            android:layout_marginEnd="@dimen/popup_button_horizontal_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50" />

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:background="@drawable/test_button_shadow"
            android:layout_marginStart="@dimen/popup_button_horizontal_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50" />

    </LinearLayout>

</LinearLayout>