<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/empty_history_textview"
        android:layout_marginTop="@dimen/empty_history_top_margin"
        android:text="@string/empty_history"
        android:textColor="@color/instruction_grey"
        android:textSize="@dimen/empty_history_text_size"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />


    <RelativeLayout
        android:id="@+id/stats_history_list_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/first_list_item_left_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/second_list_item_left_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topSpeed"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/third_list_item_left_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topRotation"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/fourth_list_item_left_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testDetails"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/fifth_list_item_left_margin"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_grey"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/test_history_recycler_view"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>