<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_below="@+id/test_control_linear_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_evolution_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/stats_test_button_height"
                android:checked="false"
                android:text="@string/time_evolution"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:textColor="@color/instruction_grey"
                android:textSize="@dimen/stat_button_text_size"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/mean_accel_label"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/stats_test_button_height"
                        android:checked="false"
                        android:text="@string/mean_accel"
                        android:textAllCaps="false"
                        android:textColor="@color/instruction_grey"
                        android:textSize="@dimen/stat_button_text_size"
                        />
                    <WebView
                        android:id="@+id/mean_accel_webview"
                        android:layout_width="400dp"
                        android:layout_height="400dp"
                        android:layout_marginLeft="@dimen/stats_box_margin"
                        android:layout_marginRight="@dimen/stats_box_margin"></WebView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/max_accel_label"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/stats_test_button_height"
                        android:checked="false"
                            android:text="@string/max_accel"
                            android:textAllCaps="false"
                            android:textColor="@color/instruction_grey"
                            android:textSize="@dimen/stat_button_text_size"
                            />
                        <WebView
                            android:id="@+id/max_accel_webview"
                            android:layout_width="400dp"
                            android:layout_height="400dp"
                            android:layout_marginLeft="@dimen/stats_box_margin"
                            android:layout_marginRight="@dimen/stats_box_margin"></WebView>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/compare_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/stats_test_button_height"
                android:checked="false"
                android:text="@string/compare"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:textColor="@color/instruction_grey"
                android:layout_marginTop="@dimen/stats_box_margin"
                android:textSize="@dimen/stat_button_text_size"
                />

            <Spinner
                android:id="@+id/compare_spinner"
                android:layout_width="@dimen/spinner_width"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_gravity="center_horizontal"/>

            <WebView
                android:id="@+id/compare_webview"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_marginLeft="@dimen/stats_box_margin"
                android:layout_marginRight="@dimen/stats_box_margin"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"></WebView>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/loading_screen_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/transparent_grey"
            android:layout_alignParentTop="true"
            android:visibility="gone">

            <TextView
                android:id="@+id/loadingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:textSize="22sp"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>

